--- a/index.html
+++ b/index.html
@@ -7,61 +7,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="#" class="logo"><span class="logo-blue">Web</span>Studio</a>
-            <ul class="navigate">
-                <li><a href="index.html" class="nav-link"><span class="logo-blue">Студія</span></a></li>
-                <li><a href="portfolio.html" class="nav-link">Портфоліо</a></li>
-                <li><a href="#" class="nav-link">Контакти</a></li>
+    <header class="page-header">
+        <div class="container main-nav">
+            <nav class="main-nav">
+                <a href="#" class="logo"><span class="logo-blue">Web</span>Studio</a>
+                <ul class="navigate">
+                    <li class="item"><a href="index.html" class="nav-link"><span class="logo-blue">Студія</span></a>
+                    </li>
+                    <li class="item"><a href="portfolio.html" class="nav-link">Портфоліо</a></li>
+                    <li class="item"><a href="#" class="nav-link">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="cont-top">
+                <li class="item"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="telephone">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="telephone">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <!--Hero section-->
         <section class="hero">
-            <h1 class="title">ефективні рішення для вашого бізнесу</h1>
+            <h1 class="title">ефективні рішення для <br /> вашого бізнесу</h1>
             <button type="button" class="button main"> Замовити послугу </button>
         </section>
         <!--Section our prioritets-->
-        <section>
-            <ul>
-                <li>
-                    <h3 class="title-link">Увага до деталей</h3>
-                    <p class="text-site">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h3 class="title-link">Пунктуальність</h3>
-                    <p class="text-site">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3 class="title-link">Планування</h3>
-                    <p class="text-site">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3 class="title-link">Сучасні технології</h3>
-                    <p class="text-site">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <ul class="flex-cont">
+                    <li class="size">
+                        <h3 class="title-link">Увага до деталей</h3>
+                        <p class="text-site">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                            позиції.</p>
+                    </li>
+                    <li class="size">
+                        <h3 class="title-link">Пунктуальність</h3>
+                        <p class="text-site">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        </p>
+                    </li>
+                    <li class="size">
+                        <h3 class="title-link">Планування</h3>
+                        <p class="text-site">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li class="size">
+                        <h3 class="title-link">Сучасні технології</h3>
+                        <p class="text-site">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        </p>
+                    </li>
+                </ul>
+
+            </div>
         </section>
         <!--What do we do-->
-        <section>
-            <h2 class="title-name">Чим ми займаємося</h2>
-            <ul>
-                <li><img src="images/tablet.jpg" alt="tablet" width=370 height="294"></li>
-                <li><img src="images/laptop.jpg" alt="laptop" width=370 height="294"></li>
-                <li><img src="images/pictureontablet.jpg" alt="picture on tablet" width=370 height="294"></li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 class="title-name">Чим ми займаємося</h2>
+                <ul class="picture">
+                    <li><img src="images/tablet.jpg" alt="tablet" width=370 height="294"></li>
+                    <li><img src="images/laptop.jpg" alt="laptop" width=370 height="294"></li>
+                    <li><img src="images/pictureontablet.jpg" alt="picture on tablet" width=370 height="294"></li>
+                </ul>
+            </div>
         </section>
         <!--Our team-->
         <section class="team">
@@ -69,43 +83,45 @@
             <ul>
                 <li class="back"> <img src="images/Igor.jpg" alt="Igor" width=270>
                     <div class="team-background">
-                    <h3 class="name">Ігор Дем'яненко</h3>
-                    <p class="text-site">Product Designer</p>
+                        <h3 class="name">Ігор Дем'яненко</h3>
+                        <p class="text-site">Product Designer</p>
                     </div>
                 </li>
                 <li class="back"> <img src="images/Olga.jpg" alt="Olga" width=270>
                     <div class="team-background">
-                    <h3 class="name">Ольга Рєпіна</h3>
-                    <p class="text-site">Frontend Developer</p>
+                        <h3 class="name">Ольга Рєпіна</h3>
+                        <p class="text-site">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="back"> <img src="images/Mykola.jpg" alt="Mykola" width=270>
                     <div class="team-background">
-                    <h3 class="name">Микола Тарасов</h3>
-                    <p class="text-site">Marketing</p>
+                        <h3 class="name">Микола Тарасов</h3>
+                        <p class="text-site">Marketing</p>
                     </div>
                 </li>
                 <li class="back"> <img src="images/Mykhailo.jpg" alt="Mykhailo" width=270>
                     <div class="team-background">
-                    <h3 class="name">Михайло Єрмаков</h3>
-                    <p class="text-site">UI Designer</p>
+                        <h3 class="name">Михайло Єрмаков</h3>
+                        <p class="text-site">UI Designer</p>
                     </div>
                 </li>
             </ul>
         </section>
-        
+
     </main>
     <footer class="footer">
-        <a href="#" class="logo-down"><span class="logo-blue">Web</span>Studio</a>
-        <address>
-            <ul>
-                <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank"
-                        rel="noopener norefferer nofollow" class="place">м. Київ,
-                        пр-т Лесі Українки, 26</a> </li>
-                <li><a href="mailto:info@devstudio.com" target="_blank"
-                        rel="noopener norefferer nofollow" class="contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="#" class="logo-down"><span class="logo-blue">Web</span>Studio</a>
+            <address class="address">
+                <ul>
+                    <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank"
+                            rel="noopener norefferer nofollow" class="place">м. Київ,
+                            пр-т Лесі Українки, 26</a> </li>
+                    <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener norefferer nofollow"
+                            class="contacts">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
