--- a/portfolio.html
+++ b/portfolio.html
@@ -6,116 +6,148 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="#" class="logo"><span class="logo-blue">Web</span>Studio</a>
-            <ul class="site-nav">
-                <li><a href="index.html" class="nav-link">Студія</a></li>
-                <li><a href="portfolio.html" class="nav-link"><span class="logo-blue">Портфоліо</span></a></li>
-                <li><a href="#" class="nav-link">Контакти</a></li>
+    <header class="page-header">
+        <div class="container main-nav">
+            <nav class="main-nav">
+                <a href="#" class="logo"><span class="logo-blue">Web</span>Studio</a>
+                <ul class="navigate">
+                    <li class="item"><a href="index.html" class="nav-link">Студія</a></li>
+                    <li class="item"><a href="portfolio.html" class="nav-link"><span
+                                class="logo-blue">Портфоліо</span></a></li>
+                    <li class="item"><a href="#" class="nav-link">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="cont-top">
+                <li class="item"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="telephone">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="telephone">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <!--Hero section-->
-        <section>
-            <h1 class="visually-hidden">Наші роботи</h1>
-            <ul>
-                <li><button type="button" class="button secondary">Усі</button></li>
-                <li><button type="button" class="button secondary">Веб-сайти</button></li>
-                <li><button type="button" class="button secondary">Додатки</button></li>
-                <li><button type="button" class="button secondary">Дизайн</button></li>
-                <li><button type="button" class="button secondary">Маркетинг</button></li>
-            </ul>                
-            <ul class="photo-link">
-                <li>
-                    <a href="#" class="link">
-                    <img src="images/Team.jpg" alt="Team" width=370>
-                    <h2 class="title-photo">Технокряк</h2>
-                    <p class="text-photo">Веб-сайт</p></a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/nba.jpg" alt="nba" width=370>
-                        <h2 class="title-photo">Постер New Orlean vs Golden Star</h2>
-                        <p class="text-photo">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/seafood.jpg" alt="seafood" width=370>
-                        <h2 class="title-photo">Ресторан Seafood</h2>
-                        <p class="text-photo">Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/headphones.jpg" alt="headphones" width=370>
-                        <h2 class="title-photo">Проєкт Prime</h2>
-                        <p class="text-photo">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/boxes.jpg" alt="boxes" width=370>
-                        <h2 class="title-photo">Проєкт Boxes</h2>
-                        <p class="text-photo">Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/monitor.jpg" alt="monitor" width=370>
-                        <h2 class="title-photo">Inspiration has no Borders</h2>
-                        <p class="text-photo">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/book.jpg" alt="book" width=370>
-                        <h2 class="title-photo">Видання Limited Edition</h2>
-                        <p class="text-photo">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/label.jpg" alt="label" width=370>
-                        <h2 class="title-photo">Проєкт LAB</h2>
-                        <p class="text-photo">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="link">
-                        <img src="images/new-laptop.jpg" alt="new laptop" width=370>
-                        <h2 class="title-photo">Growing Business</h2>
-                        <p class="text-photo">Додаток</p>
-                    </a>
-                </li>
-            </ul>
-            
+        <section class="section">
+            <div class="container">
+                <h1 class="visually-hidden">Наші роботи</h1>
+                <ul class="sec-btn">
+                    <li class="btn"><button type="button" class="button secondary">Усі</button></li>
+                    <li class="btn"><button type="button" class="button secondary">Веб-сайти</button></li>
+                    <li class="btn"><button type="button" class="button secondary">Додатки</button></li>
+                    <li class="btn"><button type="button" class="button secondary">Дизайн</button></li>
+                    <li class="btn"><button type="button" class="button secondary">Маркетинг</button></li>
+                </ul>
+            </div>
+            <div class="container">
+                <div class="flex-container">
+                    <ul class="photo-link flex-container">
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/Team.jpg" alt="Team" width=370>
+                                    <h2 class="title-photo">Технокряк</h2>
+                                    <p class="text-photo">Веб-сайт</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/nba.jpg" alt="nba" width=370>
+                                    <h2 class="title-photo">Постер New Orlean vs Golden Star</h2>
+                                    <p class="text-photo">Дизайн</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/seafood.jpg" alt="seafood" width=370>
+                                    <h2 class="title-photo">Ресторан Seafood</h2>
+                                    <p class="text-photo">Додаток</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/headphones.jpg" alt="headphones" width=370>
+                                    <h2 class="title-photo">Проєкт Prime</h2>
+                                    <p class="text-photo">Маркетинг</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/boxes.jpg" alt="boxes" width=370>
+                                    <h2 class="title-photo">Проєкт Boxes</h2>
+                                    <p class="text-photo">Додаток</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/monitor.jpg" alt="monitor" width=370>
+                                    <h2 class="title-photo">Inspiration has no Borders</h2>
+                                    <p class="text-photo">Веб-сайт</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/book.jpg" alt="book" width=370>
+                                    <h2 class="title-photo">Видання Limited Edition</h2>
+                                    <p class="text-photo">Дизайн</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/label.jpg" alt="label" width=370>
+                                    <h2 class="title-photo">Проєкт LAB</h2>
+                                    <p class="text-photo">Маркетинг</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-element">
+                            <li>
+                                <a href="#" class="link">
+                                    <img src="images/new-laptop.jpg" alt="new laptop" width=370>
+                                    <h2 class="title-photo">Growing Business</h2>
+                                    <p class="text-photo">Додаток</p>
+                                </a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="#" class="logo-down"><span class="logo-blue">Web</span>Studio</a>
-        <address>
-            <ul>
-                <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank" rel="noopener norefferer nofollow"
-                        class="place">м. Київ,
-                        пр-т Лесі Українки, 26</a> </li>
-                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener norefferer nofollow"
-                        class="contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="#" class="logo-down"><span class="logo-blue">Web</span>Studio</a>
+            <address class="address">
+                <ul>
+                    <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank"
+                            rel="noopener norefferer nofollow" class="place">м. Київ,
+                            пр-т Лесі Українки, 26</a> </li>
+                    <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener norefferer nofollow"
+                            class="contacts">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
