--- a/index.html
+++ b/index.html
@@ -70,17 +70,18 @@
         <section class="section">
             <div class="container">
                 <h2 class="title-name">Чим ми займаємося</h2>
-                <ul class="picture">
-                    <li><img src="images/tablet.jpg" alt="tablet" width=370 height="294"></li>
-                    <li><img src="images/laptop.jpg" alt="laptop" width=370 height="294"></li>
-                    <li><img src="images/pictureontablet.jpg" alt="picture on tablet" width=370 height="294"></li>
+                <ul class="flex-cont">
+                    <li class="picture"><img src="images/tablet.jpg" alt="tablet" width=370 height="294"></li>
+                    <li class="picture"><img src="images/laptop.jpg" alt="laptop" width=370 height="294"></li>
+                    <li class="picture"><img src="images/pictureontablet.jpg" alt="picture on tablet" width=370 height="294"></li>
                 </ul>
             </div>
         </section>
         <!--Our team-->
         <section class="team">
+            <div class="container">
             <h2 class="title-name">Наша команда</h2>
-            <ul>
+            <ul class="flex-cont">
                 <li class="back"> <img src="images/Igor.jpg" alt="Igor" width=270>
                     <div class="team-background">
                         <h3 class="name">Ігор Дем'яненко</h3>
@@ -106,6 +107,7 @@
                     </div>
                 </li>
             </ul>
+            </div>
         </section>
 
     </main>
