end of hw 03.03

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <button type="button" class="button main"> Замовити послугу </button>
         </section>
         <!--Section our prioritets-->
-        <section class="section">
+        <section class="prioritets">
             <div class="container">
                 <ul class="flex-cont">
                     <li class="size">
@@ -67,7 +67,7 @@
             </div>
         </section>
         <!--What do we do-->
-        <section class="section">
+        <section class="we-do">
             <div class="container">
                 <h2 class="title-name">Чим ми займаємося</h2>
                 <ul class="flex-cont">
@@ -85,25 +85,25 @@
                 <li class="back"> <img src="images/Igor.jpg" alt="Igor" width=270>
                     <div class="team-background">
                         <h3 class="name">Ігор Дем'яненко</h3>
-                        <p class="text-site">Product Designer</p>
+                        <p class="text-position">Product Designer</p>
                     </div>
                 </li>
                 <li class="back"> <img src="images/Olga.jpg" alt="Olga" width=270>
                     <div class="team-background">
                         <h3 class="name">Ольга Рєпіна</h3>
-                        <p class="text-site">Frontend Developer</p>
+                        <p class="text-position">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="back"> <img src="images/Mykola.jpg" alt="Mykola" width=270>
                     <div class="team-background">
                         <h3 class="name">Микола Тарасов</h3>
-                        <p class="text-site">Marketing</p>
+                        <p class="text-position">Marketing</p>
                     </div>
                 </li>
                 <li class="back"> <img src="images/Mykhailo.jpg" alt="Mykhailo" width=270>
                     <div class="team-background">
                         <h3 class="name">Михайло Єрмаков</h3>
-                        <p class="text-site">UI Designer</p>
+                        <p class="text-position">UI Designer</p>
                     </div>
                 </li>
             </ul>
