end of hw 03.04

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <div class="container">
                 <h2 class="title-name">Чим ми займаємося</h2>
                 <ul class="flex-cont">
-                    <li class="picture"><img src="images/tablet.jpg" alt="tablet" width=370 height="294"></li>
-                    <li class="picture"><img src="images/laptop.jpg" alt="laptop" width=370 height="294"></li>
-                    <li class="picture"><img src="images/pictureontablet.jpg" alt="picture on tablet" width=370 height="294"></li>
+                    <li class="picture"><img src="images/tablet.jpg" alt="tablet" height="294"></li>
+                    <li class="picture"><img src="images/laptop.jpg" alt="laptop" height="294"></li>
+                    <li class="picture"><img src="images/pictureontablet.jpg" alt="picture on tablet" height="294"></li>
                 </ul>
             </div>
         </section>
@@ -116,12 +116,12 @@
             <a href="#" class="logo-down"><span class="logo-blue">Web</span>Studio</a>
             <address class="address">
                 <ul>
-                    <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank"
+                    <li class="address-down"> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank"
                             rel="noopener norefferer nofollow" class="place">м. Київ,
                             пр-т Лесі Українки, 26</a> </li>
-                    <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener norefferer nofollow"
+                    <li class="address-down"><a href="mailto:info@devstudio.com" target="_blank" rel="noopener norefferer nofollow"
                             class="contacts">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+                    <li class="address-down"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
