end of hw 03/05

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                     <ul class="photo-link flex-container">                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/Team.jpg" alt="Team" width=370>
+                                    <img class="img" src="images/Team.jpg" alt="Team" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Технокряк</h2>
                                         <p class="text-photo">Веб-сайт</p>
@@ -56,7 +56,7 @@
                             </li>        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/nba.jpg" alt="nba" width=370>
+                                    <img class="img" src="images/nba.jpg" alt="nba" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Постер New Orlean vs Golden Star</h2>
                                         <p class="text-photo">Дизайн</p>
@@ -65,7 +65,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/seafood.jpg" alt="seafood" width=370>
+                                    <img class="img" src="images/seafood.jpg" alt="seafood" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Ресторан Seafood</h2>
                                         <p class="text-photo">Додаток</p>
@@ -74,7 +74,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/headphones.jpg" alt="headphones" width=370>
+                                    <img class="img" src="images/headphones.jpg" alt="headphones" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Проєкт Prime</h2>
                                         <p class="text-photo">Маркетинг</p>
@@ -83,7 +83,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/boxes.jpg" alt="boxes" width=370>
+                                    <img class="img" src="images/boxes.jpg" alt="boxes" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Проєкт Boxes</h2>
                                         <p class="text-photo">Додаток</p>
@@ -92,7 +92,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/monitor.jpg" alt="monitor" width=370>
+                                    <img class="img" src="images/monitor.jpg" alt="monitor" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Inspiration has no Borders</h2>
                                         <p class="text-photo">Веб-сайт</p>
@@ -101,7 +101,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/book.jpg" alt="book" width=370>
+                                    <img class="img" src="images/book.jpg" alt="book" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Видання Limited Edition</h2>
                                         <p class="text-photo">Дизайн</p>
@@ -110,7 +110,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/label.jpg" alt="label" width=370>
+                                    <img class="img" src="images/label.jpg" alt="label" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Проєкт LAB</h2>
                                         <p class="text-photo">Маркетинг</p>
@@ -119,7 +119,7 @@
                             </li>                        
                             <li class="flex-element">
                                 <a href="#" class="link">
-                                    <img src="images/new-laptop.jpg" alt="new laptop" width=370>
+                                    <img class="img" src="images/new-laptop.jpg" alt="new laptop" width=370>
                                     <div class="border">
                                         <h2 class="title-photo">Growing Business</h2>
                                         <p class="text-photo">Додаток</p>
