--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <div class="container">
                 <h2 class="title-name">Чим ми займаємося</h2>
                 <ul class="flex-cont">
-                    <li class="picture"><img src="images/tablet.jpg" alt="tablet" height="294"></li>
-                    <li class="picture"><img src="images/laptop.jpg" alt="laptop" height="294"></li>
-                    <li class="picture"><img src="images/pictureontablet.jpg" alt="picture on tablet" height="294"></li>
+                    <li class="picture"><img class="img" src="images/tablet.jpg" alt="tablet" height="294" width="370"></li>
+                    <li class="picture"><img class="img" src="images/laptop.jpg" alt="laptop" height="294" width="370"></li>
+                    <li class="picture"><img class="img" src="images/pictureontablet.jpg" alt="picture on tablet" height="294" width="370"></li>
                 </ul>
             </div>
         </section>
@@ -82,25 +82,25 @@
             <div class="container">
             <h2 class="title-name">Наша команда</h2>
             <ul class="flex-cont">
-                <li class="back"> <img src="images/Igor.jpg" alt="Igor" width=270>
+                <li class="back"> <img class="img" src="images/Igor.jpg" alt="Igor" width=270>
                     <div class="team-background">
                         <h3 class="name">Ігор Дем'яненко</h3>
                         <p class="text-position">Product Designer</p>
                     </div>
                 </li>
-                <li class="back"> <img src="images/Olga.jpg" alt="Olga" width=270>
+                <li class="back"> <img class="img" src="images/Olga.jpg" alt="Olga" width=270>
                     <div class="team-background">
                         <h3 class="name">Ольга Рєпіна</h3>
                         <p class="text-position">Frontend Developer</p>
                     </div>
                 </li>
-                <li class="back"> <img src="images/Mykola.jpg" alt="Mykola" width=270>
+                <li class="back"> <img class="img" src="images/Mykola.jpg" alt="Mykola" width=270>
                     <div class="team-background">
                         <h3 class="name">Микола Тарасов</h3>
                         <p class="text-position">Marketing</p>
                     </div>
                 </li>
-                <li class="back"> <img src="images/Mykhailo.jpg" alt="Mykhailo" width=270>
+                <li class="back"> <img class="img" src="images/Mykhailo.jpg" alt="Mykhailo" width=270>
                     <div class="team-background">
                         <h3 class="name">Михайло Єрмаков</h3>
                         <p class="text-position">UI Designer</p>
